# computer-use-cli

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-06-20-computer-use-mcp-design.md
ops/windows/: check-computer-use-mcp.ps1  copy-oauth-password.ps1  start-computer-use-mcp.cmd  start-computer-use-mcp.ps1  stop-computer-use-mcp.cmd  stop-computer-use-mcp.ps1  tunnel.env.example
policies/: guarded.example.json  observe-only.example.json
src/computer_use_cli/: __init__.py  actions.py  automation.py  capture.py  cli.py  mcp_oauth.py  mcp_server.py  observe.py  output.py  policy.py  uia.py  vision.py  windows.py
tests/: test_mcp_http_integration.py  test_mcp_oauth.py  test_mcp_server.py
