[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "computer-use-cli"
version = "0.4.0"
description = "Small local CLI for screenshot, mouse, keyboard, window, UIA, and vision control on Windows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Kayle Berkell" }]
dependencies = [
  "typer>=0.12.5",
  "pyautogui>=0.9.54",
  "PyGetWindow>=0.0.9",
  "Pillow>=10.4.0",
  "mss>=10.1.0",
  "pywinauto>=0.6.9",
  "opencv-python>=4.12.0.88",
  "pytesseract>=0.3.13"
]

[project.scripts]
cu = "computer_use_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/computer_use_cli"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
