[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "computer-use-cli"
version = "0.5.0"
description = "Small local CLI for screenshot, mouse, keyboard, window, UIA, and vision control on Windows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Kayle Berkell" }]
dependencies = [
  "typer>=0.12.5",
  "pyautogui>=0.9.54",
  "PyGetWindow>=0.0.9",
  "Pillow>=10.4.0",
  "mss>=10.1.0",
  "pywinauto>=0.6.9",
  "opencv-python>=4.12.0.88",
  "pytesseract>=0.3.13",
  "mcp>=1.27,<2"
]

[project.scripts]
cu = "computer_use_cli.cli:app"
cu-mcp = "computer_use_cli.mcp_server:main"

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.14,<1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/computer_use_cli"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
